--- a/src/components/games/GameList.css
+++ b/src/components/games/GameList.css
@@ -4,7 +4,7 @@
 .games {
     padding: 15px;
     margin: 15px 0;
-    height: 110px;
+    height: 160px;
     border-bottom: 1px solid black;
 }
 /* .games:hover {
@@ -20,12 +20,19 @@
     color: whitesmoke;
     background-color: rgb(46, 46, 46);
 }
+.filter-select {
+    border: 1px solid gainsboro;
+    border-radius: .3em;
+}
+.search-bar {
+    margin-top: 20px;
+}
 .btn-container {
     display: flex;
     justify-content: flex-start;
 }
 #primaryBtn {
-    margin: 20px 15px 0 0;
+    margin: 20px 15px 20px 0;
     padding: 20px;
     border: none;
     background-color: rgb(172, 238, 163);
